# exterior-mapping-2

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
headers/: application.hpp  camManager.hpp  camera.hpp  commandManager.hpp  debug.hpp  descriptorManager.hpp  imguiProxy.hpp  inputManager.hpp  memManager.hpp  mesh.hpp  pipeline.hpp  structs.hpp  swapchain.hpp  syncManager.hpp  textures.hpp  ui.hpp  uniforms.hpp  util.hpp  vertex.hpp  vulkanContext.hpp  window.hpp
resources/models/: Mineways2Skfb.mtl  bakedTextures.mtl  city.mtl  mountainLake.mtl  pier.mtl  porsche.mtl  vikingRoom.mtl
scripts/: imageComparison.py  requirements.txt
setups/: 3x3grid.json  baked_8camGrid_2.json  baked_8camGrid_3.json  baked_8camGrid_random.json  city5Cams.json  minecraft_8camGrid_random.json  mountain_8camGrid_random.json  porche_16camGrid.json  porche_2camGrid.json  porche_32camGrid.json  porche_4camCross.json  porche_8camGrid.json  porche_8camGrid_random.json
shaders/: camCube.frag  camCube.vert  compile.sh  frustumShader.frag  frustumShader.vert  getRayData.comp  lineShader.frag  lineShader.vert  mipMapReduce.comp  novelReconstruct.comp  novelSynth.comp  offlineShader.frag  offlineShader.vert  pointCloud.comp  pointCloud.frag  pointCloud.vert  rayIntersect.comp  shader.frag  shader.vert
src/: application.cpp  application.hpp  camManager.cpp  camera.cpp  commandManager.cpp  debug.cpp  descriptorManager.cpp  descriptorManager.hpp  imguiProxy.cpp  inputManager.cpp  main.cpp  memManager.cpp  mesh.cpp  mesh.hpp  pipeline.cpp  swapchain.cpp  swapchain.hpp  syncManager.cpp  textures.cpp  textures.hpp  ui.cpp  uniforms.cpp  uniforms.hpp  util.cpp  util.hpp  vertex.cpp  vertex.hpp  vulkanContext.cpp  vulkanContext.hpp  window.cpp  window.hpp
tests/: test.json
